# openai-client-base

./: .clippy.toml  .gitignore  .gitleaks.toml  .openapi-generator-ignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.root  LICENSE-APACHE  LICENSE-MIT  PIPELINE.md  README.md  RENOVATE_ANALYSIS.md  SECURITY.md  deny.toml  release-plz.toml  renovate.json5  stainless.yaml
.github/: CODEOWNERS  settings.yml
docs/: ActiveStatus.md  AdditionalTools.md  AdditionalToolsItemParam.md  AdminApiKey.md  AdminApiKeyCreateResponse.md  AdminApiKeyOwner.md  AdminApiKeysCreateRequest.md  AdminApiKeysDelete200Response.md  Annotation.md  Annotation2.md  ApiKeyList.md  ApplyPatchCallOutputStatus.md  ApplyPatchCallOutputStatusParam.md  ApplyPatchCallStatus.md  ApplyPatchCallStatusParam.md  ApplyPatchCreateFileOperation.md  ApplyPatchCreateFileOperationParam.md  ApplyPatchDeleteFileOperation.md  ApplyPatchDeleteFileOperationParam.md  ApplyPatchOperation.md  ApplyPatchOperation1.md  ApplyPatchOperationParam.md  ApplyPatchToolCall.md  ApplyPatchToolCallItemParam.md  ApplyPatchToolCallOutput.md  ApplyPatchToolCallOutputItemParam.md  ApplyPatchToolParam.md  ApplyPatchUpdateFileOperation.md  ApplyPatchUpdateFileOperationParam.md  ApproximateLocation.md  AssignedRoleDetails.md  AssignedRoleDetailsAssignmentSourcesInner.md  AssistantMessageItem.md  AssistantObject.md  AssistantObjectToolResourcesCodeInterpreter.md  AssistantObjectToolResourcesFileSearch.md  AssistantStreamEvent.md  AssistantSupportedModels.md  AssistantTool.md  AssistantToolsFileSearchFileSearch.md  (+1804 more)
(+2173 files in other folders)
