[package]
name = "openai_client_base"
version = "0.1.0"
authors = ["OpenAPI Generator team and contributors"]
description = "The OpenAI REST API. Please see https://platform.openai.com/docs/api-reference for more details."
license = "MIT"
edition = "2021"

[dependencies]
bon = "3"
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
tokio = { version = "^1.46.0", features = ["fs"] }
tokio-util = { version = "^0.7", features = ["codec"] }
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "stream"] }
reqwest-middleware = { version = "^0.4", features = ["json", "multipart"] }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
